Reworked Logo framing to be a simpler and more adjustable flexbox structure that allows for more proper scaling. This also restructured the grid header section to include min(max) in order to make sure that the items can be smaller than the grid cells themselves and makes it so overflow doesn't occur with tbe use of max-height without scaling problems.

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     height:100vh;
     width:100vw;
     display:grid;
-    grid-template-rows:0.75fr 8.75fr 0.5fr;
+    grid-template-rows:minmax(0, 0.8fr) 8.7fr 0.5fr;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -20,22 +20,20 @@
 }
 
 .logo-container{
+    padding:.5% .5% .5% 1%;
     margin-right:auto;
-    width:17.5%;
+    display:flex;
+    width:auto;
     max-height:100%;
-    display:grid;
-    grid-template-columns:1fr 9.5fr 1fr;
-    grid-template-rows:1fr 9.5fr 1fr;
+    justify-content:center;
+    align-items:center;
 }
-
 .logo{
-    object-fit:cover;
+    display:flex;
+    justify-content:center;
+    align-items:center;
     width:100%;
     max-height:100%;
-    grid-column-start:2;
-    grid-column-end:2;
-    grid-row-start:2;
-    grid-row-end:2;
 }
 
 .navItem{
